--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 LINE_CHANNEL_ID=2008928461
 LINE_CHANNEL_SECRET=26c16472160ad8f289c2ac2f6cc6e40d
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_BASE_URL=https://seo-aeo-web.netlify.app/
